Remove limitation to allow only generic parameters of the same size.

--- a/src/CampbellDAT/CampbellDAT.csproj
+++ b/src/CampbellDAT/CampbellDAT.csproj
@@ -5,13 +5,10 @@
     <PackageTags>Campbell DAT TOB1 TOB2 TOB3</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Nullable>enable</Nullable>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
   
