--- a/src/CampbellDAT/CampbellDAT.csproj
+++ b/src/CampbellDAT/CampbellDAT.csproj
@@ -5,7 +5,9 @@
     <PackageTags>Campbell DAT TOB1 TOB2 TOB3</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-    <PackageReadmeFile>README.md</PackageReadmeFile>    
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <!-- default lang version is 7.3: https://docs.microsoft.com/de-de/dotnet/csharp/language-reference/configure-language-version -->
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
